--- a/musicpageexp.css
+++ b/musicpageexp.css
@@ -1,1 +1,85 @@
+#albumlist{
+    float:left;
+    font-size:30px;
+}
+
+
+td
+{
+   
+    float: left;
+    background-color:skyblue;
+    width:200px;
+    height:200px;
+    color: aliceblue;
+    font-size:30px;
+   
+   
+}
+
+#album
+{
+   
+    background-color:blueviolet;
+   
+}
+
+#cover
+{
+   
+}
+
+#title
+{
+   
+  text-align: center;
+ 
+   
+}
+
+#songlist
+{
+   
+    float:left;
+    float:top;
+    background-color:skyblue;
+    width:50px;
+    height:200px;
+    color: aliceblue;
+    font-size: 20px
+   
+   
+}
+h1{
+    color:darkgoldenrod;
+}
+h2{
+    width:200px;
+    background-color:darkblue;
+    color:white;
+   
+   
+}
+#header{
+   
+    float:top;
+    float:left;
+    width:110px;
+}
+#header2{
+    width:170px;
+    float:left;
+   
+}
+
+#info
+{
+
+    float:left;
+    width:200px;
+    background-color: skyblue;
+    color: white;
+    font-size:15px;
+    clear:bottom;
+}
 
